Modified JS to Fix Collection Names in dropdown, Changed CSS to fix banner spacing issues, Fixed link colors to match library website

--- a/libraries/utk/overarching.css
+++ b/libraries/utk/overarching.css
@@ -63,7 +63,7 @@ section#block-islandora-solr-basic-facets {
 }
 
 .navigationtop a {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Cambria, Helvetica, sans-serif;
 	padding: 8px 25px;
 	display: block;
 	color: #000000;
@@ -106,7 +106,7 @@ section#block-islandora-solr-basic-facets {
 	width: 125px;
 	text-align: left;
 	border: none;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Cambria, Helvetica, sans-serif;
 	padding: 8px 25px;
 	display: block;
 	color: #000000;
